# emf-rs

./: CONTRIBUTING.md  COPYRIGHT  Cargo.toml  README.md
.github/workflows/: main.yml
emf-core-base-ffi-rs/: Cargo.toml  build.rs
emf-core-base-ffi-rs/src/: boolean.rs  (+7 more)
emf-core-base-rs/: Cargo.toml
emf-core-base-rs-bare/: Cargo.toml
emf-core-base-rs-bare/src/: base_interface.rs  base_interface_fn.rs  ffi_object.rs  lib.rs  library.rs  module.rs  sys.rs  version.rs
emf-core-base-rs-bare/src/module/: global_token.rs  loader_module_handle.rs  local_token.rs  module_handle.rs  module_interface.rs  module_loader.rs  module_loader_handle.rs  module_token.rs  native_module.rs
emf-core-base-rs-bare/src/sys/: global_sys_token.rs  global_token.rs  local_sys_token.rs  local_token.rs
emf-core-base-rs-bare/src/version/: version_impl_global.rs  version_impl_local.rs
emf-core-base-rs-ffi/: Cargo.toml
emf-core-base-rs-ffi-bare/: Cargo.toml
emf-core-base-rs-ffi/src/: bindings.rs  cbase.rs  extensions.rs  fn_id.rs  interface_binding.rs  interface_loader.rs  lib.rs  library.rs  module.rs  type_wrapper.rs
emf-core-base-rs-ffi/src/bindings/: bootstrap_bindings.rs  closure_wrapper.rs  library.rs  module.rs  sys.rs  version.rs
emf-core-base-rs-ffi/src/bindings/bootstrap_bindings/: tests.rs
emf-core-base-rs-ffi/src/bindings/module/: tests.rs
emf-core-base-rs-ffi/src/bindings/sys/: tests.rs
emf-core-base-rs-ffi/src/bindings/version/: tests.rs
emf-core-base-rs-ffi/src/collections/: non_null_const.rs  span.rs  static_vec.rs
emf-core-base-rs-ffi/src/extensions/: unwind_internal.rs
emf-core-base-rs-ffi/src/module/: api.rs  module_loader.rs  native_module.rs
emf-core-base-rs-ffi/src/sys/: api.rs  sync_handler.rs
emf-core-base-rs-ffi/src/version/: api.rs
emf-core-base-rs/src/: bindings.rs  cbase.rs  error.rs  extensions.rs  fat_ptr.rs  fn_caster.rs  global.rs  init.rs  lib.rs  library.rs  module.rs  ownership.rs  sys.rs  to_os_path_buff.rs  version.rs
emf-core-base-rs/src/extensions/: unwind_internal.rs
emf-core-base-rs/src/fn_caster/: extensions.rs  library.rs  module.rs  sys.rs  version.rs
emf-core-base-rs/src/fn_caster/extensions/: unwind_internal.rs
emf-core-base-rs/src/global/: extensions.rs  library.rs  module.rs  sys.rs  version.rs
emf-core-base-rs/src/global/extensions/: unwind_internal.rs
emf-core-base-rs/src/module/: api.rs  module_loader.rs  native_module.rs
emf-core-base-rs/src/sys/: sync_handler.rs
ffi/: README.md
ffi/emf-core-base-rs-ffi/: Cargo.toml
ffi/emf-core-base-rs-ffi/src/: boolean.rs  cbase.rs  collections.rs  errors.rs  fn_id.rs  init.rs  lib.rs  library.rs  module.rs  sys.rs  version.rs
ffi/emf-core-base-rs-ffi/src/collections/: optional.rs  result.rs  span.rs  static_vec.rs
ffi/emf-core-base-rs-ffi/src/errors/: error.rs  error_info.rs
ffi/emf-core-base-rs-ffi/src/extensions/: unwind_internal.rs
ffi/emf-core-base-rs-ffi/src/module/: api.rs  module_loader.rs  native_module.rs
ffi/emf-core-base-rs-ffi/src/sys/: api.rs  sync_handler.rs
ffi/emf-core-base-rs-ffi/src/version/: api.rs
(+21 files in other folders)
