[package]
name = "emf-core-base-rs-bare"
version = "0.1.0"
authors = ["Gabriel Borrelli <gabriel.borrelli@nanoshellsoft.com>"]
edition = "2018"
description = "Idiomatic rust wrapper of the emf-core-base interface"
license = "MIT OR Apache-2.0"
categories = ["game-development"]

[dependencies]
emf-core-base-rs-ffi-bare = { version = "0.1.0", path = "../emf-core-base-rs-ffi-bare" }
