[package]
name = "emf-core-base-rs-ffi"
version = "0.1.2"
authors = ["Gabriel Borrelli <gabriel.borrelli@nanoshellsoft.com>"]
edition = "2018"
description = "Rust wrapper of the emf-core-base interface"
repository = "https://github.com/fimoengine/emf-rs"
license = "MIT OR Apache-2.0"
categories = ["game-development"]

[features]
init = []
extensions = []
unwind_internal = ["extensions"]
extensions_all = ["unwind_internal"]
